--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -552,10 +552,34 @@ img.selectedPartnerLogo {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 25rem;
+  gap: 2rem;
+  margin-bottom: 3rem;
+  background-color: rgba(1, 81, 156, 0.1);
+  box-shadow: 0px 8px 6.3px 0px #00000036;
+  padding: 1.5rem;
+  border-radius: 15px;
 }
 
 .gallery h2 {
   color: white;
+}
+
+.galleryImages {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.galleryImages img {
+  width: 100%;
+  height: 300px;
+  border-radius: 15px;
+}
+
+.galleryImages .tall {
+  grid-row: span 2;
+  height: 100%;
 }
 
 .contactForm {
@@ -1029,6 +1053,9 @@ img.selectedPartnerLogo {
     width: 6rem;
     height: 3rem;
     font-size: 1.6rem;
+  }
+  .gallery {
+    width: 90%;
   }
 }
 
