--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -120,12 +120,14 @@ input {
 
 .soldierCard {
   width: 100%;
+  height: 605px;
   margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   box-shadow: 0px 4px 7.7px 3px #00000040;
   border-radius: 1rem;
   background-color: white;
+  position: relative;
 }
 
 .postHeader {
@@ -199,6 +201,50 @@ input {
 
 .saveIcon {
   margin-left: auto;
+}
+
+.skeletonLoading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #9c9c9c;
+  border-radius: 1rem;
+  overflow: hidden;
+  opacity: 1;
+  transition: opacity 0.5s ease-out;
+  z-index: 2;
+}
+
+.skeletonLoading.hide {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.skeletonLoading::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -150px;
+  height: 100%;
+  width: 150px;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.4),
+    transparent
+  );
+  animation: shimmer 1.5s infinite;
+}
+
+@keyframes shimmer {
+  0% {
+    left: -150px;
+  }
+  100% {
+    left: 100%;
+  }
 }
 
 .howItStartedButton {
@@ -920,6 +966,7 @@ img.selectedPartnerLogo {
   }
   .soldierCard {
     width: 100%;
+    height: 433px;
   }
   .logos img {
     width: 80px;
@@ -1094,6 +1141,19 @@ img.selectedPartnerLogo {
   }
   .about {
     font-size: 1.1rem;
+  }
+  .soldiersContainer {
+    width: 95%;
+  }
+  .searchBar input {
+    width: 80%;
+  }
+  .searchBar button {
+    top: 4.4rem;
+    left: 3.3rem;
+  }
+  .soldierCard {
+    height: 1%;
   }
   .howItStartedContainer {
     font-size: 0.8rem;
