--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,7 +49,7 @@ body {
 }
 
 .title img {
-  width: 20rem;
+  width: 15rem;
 }
 
 .fixed-bg {
@@ -350,6 +350,10 @@ input {
   box-shadow: 4px 4px 6.5px 0px #00000040;
 }
 
+#firstImage {
+  width: 170%;
+}
+
 .right img {
   transform: translateX(30%);
 }
@@ -468,6 +472,11 @@ input {
   height: 5rem;
 }
 
+#contentLast span {
+  color: rgba(255, 166, 0);
+  font-weight: 700;
+}
+
 #leftPrimary {
   position: absolute;
   top: 0rem;
@@ -501,20 +510,52 @@ input {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.85);
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 999;
+  z-index: 1000;
+}
+
+.enlargedImageContainer {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.enlargedImageContainer img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 50px;
+  width: 30px;
+  height: 30px;
+  background: rgba(0, 0, 0, 0.6);
+  border: none;
+  color: white;
+  font-size: 1.2rem;
   cursor: pointer;
+  z-index: 1001;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease;
 }
 
 .imageModal img {
   max-width: 90%;
   max-height: 90%;
-  border-radius: 1rem;
   cursor: default;
 }
 
@@ -556,7 +597,7 @@ input {
 }
 
 .partnersContainer h3 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 
@@ -596,13 +637,14 @@ input {
 
 .partnerCard h3 {
   margin-bottom: 1rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 500;
   color: rgb(255, 166, 0);
 }
 
 .partnerCard p {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
+  width: 90%;
 }
 
 img.selectedPartnerLogo {
@@ -650,12 +692,12 @@ img.selectedPartnerLogo {
 
 .galleryImages .enlarge {
   position: absolute;
-  width: 100px;
-  height: 100px;
-  top: -20px;
-  left: -20px;
-  z-index: 1;
+  bottom: 10px;
+  left: 10px;
+  z-index: 2;
   cursor: pointer;
+  color: white;
+  font-size: 2rem;
 }
 
 .contactForm {
@@ -679,6 +721,15 @@ img.selectedPartnerLogo {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+.formGroup span {
+  position: absolute;
+  right: -20px;
+  top: 6px;
+  z-index: 1000;
+  color: rgb(255, 166, 0);
 }
 
 .formGroup input {
@@ -743,6 +794,42 @@ img.selectedPartnerLogo {
   transform: scale(1.05);
 }
 
+.successContainer {
+  text-align: center;
+}
+
+.successContainer div {
+  font-size: 3rem;
+}
+
+.successContainer h3 {
+  color: rgb(255, 166, 0);
+  font-size: 1.6rem;
+}
+
+.loadingCircle {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin-top: 2rem;
+}
+
+#socialLink {
+  font-size: 1.3rem;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .app-credit {
   font-size: 1.2rem;
   line-height: 1.5;
@@ -803,7 +890,7 @@ img.selectedPartnerLogo {
     margin-top: 2rem;
   }
   #firstEnlarge {
-    transform: translate(-50%, -20%);
+    transform: translate(-30%, -10%);
   }
   #whatIs {
     transform: translate(-70%, -200%);
@@ -998,11 +1085,15 @@ img.selectedPartnerLogo {
     width: 90%;
     min-height: 230px;
   }
+  .partnersContainer h3 {
+    font-size: 1.3rem;
+  }
   .partnerCard h3 {
     font-size: 2rem;
   }
   .partnerCard p {
     width: 80%;
+    font-size: 1.3rem;
   }
   .howItStartedContainer {
     font-size: 1rem;
@@ -1150,6 +1241,9 @@ img.selectedPartnerLogo {
   .image.right.double .secondery {
     width: 140px;
     transform: translate(90%, -20%);
+  }
+  #socialLink {
+    font-size: 1.5rem;
   }
   .app-credit {
     font-size: 1.4rem;
