--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,10 @@ body {
   color: rgb(255, 166, 0);
 }
 
+.title {
+  margin-top: 10rem;
+}
+
 .title img {
   width: 15rem;
 }
@@ -589,6 +593,7 @@ input {
   padding: 1rem 0;
   border-radius: 1rem;
   box-shadow: 0px 8px 6.3px 0px #00000036;
+  margin-top: 6rem;
 }
 
 .partnersContainer h2 {
