--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,11 +49,41 @@ body {
 }
 
 .title {
-  margin-top: 10rem;
+  /* margin-top: 5rem; */
 }
 
 .title img {
   width: 15rem;
+}
+
+.nav {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(1, 81, 156, 0.1);
+  padding: 1rem 0;
+  border-radius: 1rem;
+  box-shadow: 0px 8px 6.3px 0px #00000036;
+}
+
+.navLink {
+  text-decoration: none;
+  color: white;
+  font-size: 1.3rem;
+  border-radius: 1rem;
+  padding: 0.3rem;
+  font-weight: 500;
+}
+
+.navLink.img {
+  background-color: transparent;
+}
+
+.nav img {
+  width: 3rem;
 }
 
 .fixed-bg {
@@ -528,7 +558,7 @@ input {
 .enlargedImageContainer {
   position: relative;
   width: 40%;
-  height: 90%;
+  height: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1119,7 +1149,7 @@ img.selectedPartnerLogo {
     transform: translateX(-10%);
   }
   .enlargedImageContainer {
-    width: 70%;
+    width: 80%;
   }
   .content.double p {
     width: 100%;
