--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,6 +59,7 @@ body {
 .nav {
   position: sticky;
   max-width: 90%;
+  height: 70px;
   top: 1rem;
   display: flex;
   gap: 1rem;
@@ -69,7 +70,7 @@ body {
   border-radius: 1rem;
   background-color: rgba(1, 81, 156, 0.1);
   box-shadow: 0px 8px 6.3px rgba(0, 0, 0, 0.2);
-  z-index: 2000;
+  z-index: 999;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -185,11 +186,12 @@ input {
 
 .soldierCard img {
   width: 100%;
+  max-height: 510px;
 }
 
 .soldierCard {
   width: 100%;
-  height: 605px;
+  max-height: 605px;
   margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
@@ -573,11 +575,19 @@ input {
   z-index: 1000;
 }
 
+.modalDescription {
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-top: 3rem;
+}
+
 .enlargedImageContainer {
   position: relative;
   width: 40%;
   height: 60%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -1068,12 +1078,12 @@ img.selectedPartnerLogo {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 550px) {
   html {
     font-size: 13px;
   }
   .navLink {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
   .about {
     font-size: 1.8rem;
@@ -1101,7 +1111,7 @@ img.selectedPartnerLogo {
   }
   .soldierCard {
     width: 100%;
-    height: 433px;
+    max-height: 525px;
   }
   .logos img {
     width: 80px;
