--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -590,6 +590,7 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 1001;
 }
 
 .enlargedImageContainer img {
