--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -191,7 +191,7 @@ input {
 
 .soldierCard {
   width: 100%;
-  max-height: 605px;
+  height: 599px;
   margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
@@ -279,13 +279,17 @@ input {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 599px;
   background-color: #9c9c9c;
   border-radius: 1rem;
   overflow: hidden;
   opacity: 1;
   transition: opacity 0.5s ease-out;
   z-index: 2;
+}
+
+.gallery .skeletonLoading {
+  height: 100%;
 }
 
 .skeletonLoading.hide {
@@ -1112,7 +1116,10 @@ img.selectedPartnerLogo {
   }
   .soldierCard {
     width: 100%;
-    max-height: 525px;
+    height: 433px;
+  }
+  .skeletonLoading {
+    height: 433px;
   }
   .logos img {
     width: 80px;
@@ -1291,7 +1298,7 @@ img.selectedPartnerLogo {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 400px) {
   html {
     font-size: 13px;
   }
@@ -1299,7 +1306,7 @@ img.selectedPartnerLogo {
     font-size: 1.1rem;
   }
   .soldiersContainer {
-    width: 95%;
+    width: 24rem;
   }
   .searchBar input {
     width: 80%;
@@ -1309,7 +1316,10 @@ img.selectedPartnerLogo {
     left: 3.3rem;
   }
   .soldierCard {
-    height: 1%;
+    height: 355px;
+  }
+  .skeletonLoading {
+    height: 355px;
   }
   .howItStartedContainer {
     font-size: 0.8rem;
@@ -1361,5 +1371,8 @@ img.selectedPartnerLogo {
   }
   #videoButton {
     transform: translate(-10%, -10%);
+  }
+  .galleryImages {
+    grid-auto-rows: 180px;
   }
 }
