--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -182,7 +182,7 @@ input {
 
 .soldierCard img {
   width: 100%;
-  max-height: 510px;
+  max-height: 503px;
 }
 
 .soldierCard {
@@ -1176,6 +1176,9 @@ img.selectedPartnerLogo {
     width: 100%;
     height: 433px;
   }
+  .soldierCard img {
+    max-height: 365px;
+  }
   .skeletonLoading {
     height: 433px;
   }
@@ -1375,6 +1378,9 @@ img.selectedPartnerLogo {
   }
   .soldierCard {
     height: 355px;
+  }
+  .soldierCard img {
+    max-height: 288px;
   }
   .skeletonLoading {
     height: 355px;
