--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,9 +42,15 @@ body {
 }
 
 .intro p {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 600;
   color: rgb(255, 166, 0);
+}
+
+#introFirst {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 .title {
