--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,6 +37,7 @@ body {
   background-position: center;
   z-index: 1000;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -419,7 +420,7 @@ input {
   box-shadow: 4px 4px 6.5px 0px #00000040;
 }
 
-#firstImage {
+# Image {
   width: 170%;
 }
 
@@ -1159,6 +1160,9 @@ img.selectedPartnerLogo {
 @media (max-width: 550px) {
   html {
     font-size: 13px;
+  }
+  .intro p {
+    font-size: 3rem;
   }
   .nav {
     width: 100%;
