--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -76,6 +76,7 @@ body {
   box-shadow: 0px 8px 6.3px rgba(0, 0, 0, 0.2);
   z-index: 999;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  backdrop-filter: blur(4px);
 }
 
 #scroll-container:has(.nav:is(:sticky)) .nav {
